# hebrew-dates-to-cal

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PLAN.md  README.md  pyproject.toml
app/: App.tsx  app.json  package-lock.json  package.json
app/src/__tests__/: hebrewDate.test.ts  scheduler.test.ts
app/src/components/: HebrewDayPicker.tsx  HebrewMonthPicker.tsx  YearsPicker.tsx
app/src/core/: hebrewDate.ts  ics.ts  index.ts  scheduler.ts  types.ts
app/src/screens/: MainScreen.tsx
data/: bachar_events.csv  family_dates.csv  nehora_only.csv
hebrew_dates_to_cal/: __init__.py  cli.py  ics.py  models.py  parser.py  scheduler.py
tests/: test_regression.py
